tests/baselines/reference/typeCheckTypeArgument.errors.txt
==== tests/cases/compiler/typeCheckTypeArgument.ts (6 errors) ====
    /// <reference no-default-lib="true"/>
    
    var f: <T extends UNKNOWN>() => void;
                      ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.
    
    interface IFoo<T extends UNKNOWN> { }
                             ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.
    
    class Foo<T extends UNKNOWN> { }
                        ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.
    
    function bar<T extends UNKNOWN>() { }
                           ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.
    
    class Foo2 {
        method<T extends UNKNOWN>() { }
                         ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.
    }
    
    (<T extends UNKNOWN>(a) => { });
                ~~~~~~~
!!! error TS2095: Could not find symbol 'UNKNOWN'.